--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.6",
+    "framer-motion": "^11.2.12",
     "lucide-react": "^0.399.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
