--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.6",
@@ -17,6 +18,7 @@
     "lucide-react": "^0.399.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.4",
+    "qs": "^6.12.3",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.4",
